# gmail_parser

./: .env.example  .gitignore  IMPLEMENTATION_LOG.md  LICENSE  README.md  TECHNICAL_DESIGN.md  pyproject.toml  start.sh  stop.sh
api/: cache.py  deps.py  log_buffer.py  main.py  settings.py
api/routers/: action_items.py  actions.py  alert_rules.py  analytics.py  auth.py  categories.py  digest.py  emails.py  expenses.py  rules.py  sync.py
docs/plans/: 2026-02-21-email-reader-design.md  2026-02-22-llm-integration-design.md
examples/: 01_setup.py  02_ingest.py  03_search.py  04_analytics.py  05_filter.py  06_export_csv.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  AuthGate.jsx  api.js  categories.js  index.css
frontend/src/components/: BulkActionBar.jsx  EmailPanel.jsx  EmailRow.jsx  Sidebar.jsx  SyncBar.jsx
frontend/src/views/: Actions.jsx  Alerts.jsx  Browse.jsx  Categories.jsx  Login.jsx  MDR.jsx  Overview.jsx  Rules.jsx  Search.jsx  Senders.jsx  Settings.jsx  Spending.jsx  Subscriptions.jsx  Sync.jsx  Triage.jsx
gmail_parser/: __init__.py  auth.py  categorizer.py  client.py  config.py  embeddings.py  exceptions.py  expenses.py  ingestion.py  llm_client.py  llm_extractor.py  search.py  store.py
tests/: conftest.py  test_client.py  test_embeddings.py  test_ingestion.py  test_store.py
